# simple-serverless-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  template.yaml
.github/workflows/: build-and-deploy.yml  code-quality.yml
handlers/: api.py  simple_webhook.py  webhook.py
handlers/mappers/: __init__.py  aws.py
requests/: webhook.rest
src/simple_serverless_project/adapters/: webhook.py
src/simple_serverless_project/controllers/: webhook.py
src/simple_serverless_project/models/: webhook.py
src/ssp/: configurator.py
src/ssp/adapters/: webhook.py
src/ssp/controllers/: webhook.py
src/ssp/domain/models/: __init__.py  configuration.py  product.py  ticket.py
src/ssp/domain/ports/: __init__.py  driven.py  driving.py
src/ssp/domain/services/: __init__.py  store.py
src/ssp/infrastructure/adapters/driven/: mem_cart.py  mem_storage.py
src/ssp/models/: context.py  webhook.py
src/ssp/ports/: http_inputs.py
src/ssp/schema/: aws.py
tests/integration/aux/: strategies.py
tests/integration/handlers/: test_api.py  webhook_test.py
tests/integration/simple_serverless_project/: test_webhook.py
tests/unit/handlers/mappers/: test_aws.py
tests/unit/simple_serverless_project/adapters/: messages_test.py
tests/unit/simple_serverless_project/logic/: aws_test.py
tests/unit/ssp/adapters/: webhook_test.py
tests/unit/ssp/models/: product.py
