[project]
name = "ssp"
version = "0.1.0"
description = "Simple template for serverless projects"
authors = [{ name = "Erick G. Islas-Osuna", email = "erickisos653@gmail.com" }]
requires-python = ">=3.12.0,<4"
readme = "README.md"
license = "GPL-3.0"
dependencies = [
    "pydantic>=2.11.7,<3",
    "aws-xray-sdk>=2.11.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1,<2",
    "bandit>=1.8.0,<2",
    "pytest>=8.4.1,<9",
    "pre-commit>=4.0.1,<5",
    "hypothesis>=6.137.1,<7",
    "codecov>=2.1.13,<3",
    "aws-sam-cli>=1.142.1,<2",
    "ruff>=0.12.12",
]

[tool.hatch.build.targets.sdist]
include = ["src/ssp"]

[tool.hatch.build.targets.wheel]
include = ["src/ssp"]

[tool.hatch.build.targets.wheel.sources]
"src/ssp" = "ssp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'W', 'C901']
ignore = []
fixable = ['ALL']
unfixable = []

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'
docstring-code-line-length = 'dynamic'

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
