[project]
name = "ssp"
version = "0.1.0"
description = "Simple template for serverless projects"
authors = [{ name = "Erick G. Islas-Osuna", email = "erickisos653@gmail.com" }]
requires-python = ">=3.13.0,<4"
readme = "README.md"
license = "GPL-3.0"
dependencies = [
    "pydantic>=2.11.7,<3",
    "aws-xray-sdk>=2.11.0,<3",
]

[dependency-groups]
dev = [
    "aws-sam-cli>=1.142.1,<2",
    "bandit>=1.8.0,<2",
    "codecov>=2.1.13,<3",
    "hypothesis>=6.137.1,<7",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.4.1,<9",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]

[tool.hatch.build.targets.sdist]
include = ["src/ssp"]

[tool.hatch.build.targets.wheel]
include = ["src/ssp"]

[tool.hatch.build.targets.wheel.sources]
"src/ssp" = "ssp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = 'py313'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']
ignore = []

fixable = ['ALL']
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = 'double'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'

docstring-code-format = false
docstring-code-line-length = 'dynamic'

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
